public/style.css
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Crafty+Girls&display=swap');
@font-face {
  font-family: bunny-snaps;
  src: url(./font/BunnySnaps.otf);
}
@media (min-width: 100vh) {
  body {
    background-image: url('./img/mimi.jpg')
  }
}
@media (max-width: 100vh) {
  body {
    background-image: url('./img/mimipeek.png')
  }
}

body, html {
  color: #96a8e9;

  margin: 0;


  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 100dvh;
  box-sizing: border-box;

  font-family: bunny-snaps;
  font-size: 1.5vw;
  text-align: center;
  padding-top: env(safe-area-inset-top);
}

.header {
  background-color: #eeeddc;
  color: #adc1f9;

  font-family: "Crafty Girls", cursive;
  font-size: 1.5vw;

  display: flex;
  justify-content: center;
  align-items: center;

  margin: 0 auto;

  width: 17rem;
  height: 11vh;

  border-radius: 1vh;
  border: #c8d5fd dashed 0.4vh;
  outline: #eeeddc solid 1vh;
}

.box-wrapper {
  position: relative;
  width: 50vw;
  margin: 0 auto;
}

.left-frill {
  position: absolute;
  right: 100%;

  margin-right: -3vw;
  z-index: -1;

  height: 100vh;
  filter: drop-shadow(1vh 3vh 2vh black);
}

.right-frill {
  position: absolute;
  left: 100%;

  margin-left: -3vw;
  z-index: -1;

  height: 100vh;
  filter: drop-shadow(1vh 3vh 2vh black);
  transform: rotateY(180deg);
}

.the-main-thing-box-thing {
  scrollbar-width: none;
  background-color: #c8d5fd;
  color: #7b92e8;
  
  background-image: radial-gradient(#eff6fc 5%, transparent 5%),
      radial-gradient(#eff6fc 5%, transparent 5%);
  background-color: #d7dcfe;
  background-position: 0 0, 5vh 5vh;
  background-size: 10vh 10vh;
  
  min-height: 100dvh;
  width: 100%;
  height: 100vh;
    
  margin: 0 auto;
    
  overflow-y: auto;
   
  box-sizing: border-box;
  padding-top: 7vh;
}

.timer-label {
  font-size: 2.5vw;
  line-height: 2vh;
}

.evil-ass-yearn-timer {
  font-size: 2.5vw;
  font-family: "Quicksand", serif;
}

button {
  background-color: #96a8e9;
  border: none;
  border-radius: 0.5rem;
  color: #d5dcf6;
  font-family: "Quicksand", serif;
  font-size: 2vw;
  padding: 0.5rem 1rem;
  margin-top: 1rem;
}

hr {
  border-top: 0.25vh solid #96a8e9;
  width: 50%;
}

.mainimg {
  height: 15vw;
  margin-top: 3vh;
  width: 15vw;
}

.linkimg {
  height: 2vw;
  width: 2vw;
}

img.emoji {
   height: 1em;
   width: 1em;
   margin: 0 .05em 0 .1em;
   vertical-align: -0.1em;
}

footer {
  font-size: 1vw;
  margin: 2rem;
}

@media (max-width: 100vh) {
  body, html {
      font-size: 3vw;
    }

    .left-frill {
      margin-right: -6vw;
    }

    .right-frill {
      margin-left: -6vw;
    }

    .header {
      font-size: 3vw;
    }

    .box-wrapper {
      position: relative;
      width: 80vw;
      margin: 0 auto;
    }


    .timer-label {
      font-size: 5vw;
      line-height: 4vh;
    }

    .evil-ass-yearn-timer {
      font-size: 5vw;

    }

    button {
      font-size: 4vw;
    }

    .mainimg {
      height: 30vw;
      margin-top: 3vh;
      width: 30vw;
    }

    .linkimg {
      height: 2vw;
      width: 2vw;
    }

    footer {
      font-size: 1.5vw;
    } 
}

@media (max-width: 70vh) {
  .left-frill {
      margin-right: -12vw;
    }

    .right-frill {
      margin-left: -12vw;
    }
}

@media (max-width: 50vh) {
  .left-frill {
      margin-right: -16vw;
    }

  .right-frill {
    margin-left: -16vw;
  }
}

